--- a/.github/workflows/check-for-new-builds.yml
+++ b/.github/workflows/check-for-new-builds.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Build Gradle Project
         run: ./gradlew installDist
       - name: Run API Queries
-        run: build/install/new-asf-builds-query/bin/new-asf-builds-query --days=1 --develocity-url=https://ge.solutions-team.gradle.com
+        run: build/install/new-asf-builds-query/bin/new-asf-builds-query --develocity-url=https://ge.apache.org
         env:
-          API_KEY: ${{ secrets.SOLUTIONS_API_KEY }}
+          API_KEY: ${{ secrets.API_KEY }}
       - name: Create Job Summary
         run: cat report.md >> $GITHUB_STEP_SUMMARY
