--- a/.github/workflows/check-for-new-builds.yml
+++ b/.github/workflows/check-for-new-builds.yml
@@ -18,6 +18,8 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
+      - name: Set up Gradle
+        uses: gradle/actions/setup-gradle@v3
       - name: Build Gradle Project
         run: ./gradlew installDist
       - name: Run API Queries
