--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -17,5 +17,7 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
+      - name: Set up Gradle
+        uses: gradle/actions/setup-gradle@v3
       - name: Build Gradle Project
         run: ./gradlew build
