--- a/.github/workflows/check-for-new-asf-builds.yml
+++ b/.github/workflows/check-for-new-asf-builds.yml
@@ -6,6 +6,9 @@ on:
     # Every Morning at 11.00am
     - cron: "0 11 * * *"
 
+env:
+  REPORT_FILE: "reports/new-asf-projects.md"
+
 jobs:
   generate_report:
     name: Generate Report
@@ -26,5 +29,7 @@ jobs:
         run: build/install/new-asf-builds-query/bin/new-asf-builds-query --develocity-url=https://ge.apache.org
         env:
           API_KEY: ${{ secrets.API_KEY }}
+          DEVELOCITY_URL: "https://ge.apache.org"
+          KNOWN_PROJECTS_FILE: "asf/known-projects.txt"
       - name: Create Job Summary
-        run: cat report.md >> $GITHUB_STEP_SUMMARY
+        run: cat $REPORT_FILE >> $GITHUB_STEP_SUMMARY
